--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.fridgerec">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".ParseApplication"
@@ -17,6 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fridgerec"
         tools:targetApi="31">
+        <activity
+            android:name=".InventoryItemCreationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShoppingItemCreationActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.parse.SERVER_URL"
@@ -30,8 +36,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
