--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".ParseApplication"
+        android:name=".FridgerecApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,11 +18,20 @@
         android:theme="@style/Theme.Fridgerec"
         tools:targetApi="31">
         <activity
-            android:name=".InventoryItemCreationActivity"
-            android:exported="false" />
+            android:name=".activities.InventoryItemCreationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+
         <activity
-            android:name=".ShoppingItemCreationActivity"
-            android:exported="false" />
+            android:name=".activities.ShoppingItemCreationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
 
         <meta-data
             android:name="com.parse.SERVER_URL"
