Migrate to Navigation component: setup bottom navigation + move Creation activity to fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fridgerec"
-        tools:targetApi="31">
-        <activity
-            android:name=".activities.InventoryItemCreationActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".activities.ShoppingItemCreationActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
-        </activity>
+        android:theme="@style/AppTheme"
+        tools:targetApi="31"
+        >
 
         <meta-data
             android:name="com.parse.SERVER_URL"
