--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 
     //FOR: Material Design
     implementation 'com.google.android.material:material:1.6.1'
+
+    //FOR: Navigation Component
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
+    implementation 'androidx.navigation:navigation-ui:2.4.2'
 }
