--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,15 @@ dependencies {
     //FOR: Navigation Component
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
+
+    //FOR: Litho
+    implementation 'com.facebook.litho:litho-core:0.41.2'
+    implementation 'com.facebook.litho:litho-widget:0.41.2'
+    annotationProcessor 'com.facebook.litho:litho-processor:0.41.2'
+    //FOR: SoLoader
+    implementation 'com.facebook.soloader:soloader:0.10.1'
+    //FOR: adding Sections
+    implementation 'com.facebook.litho:litho-sections-core:0.41.2'
+    implementation 'com.facebook.litho:litho-sections-widget:0.41.2'
+    compileOnly 'com.facebook.litho:litho-sections-annotations:0.41.2'
 }
