--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.facebook.litho:litho-sections-core:0.41.2'
     implementation 'com.facebook.litho:litho-sections-widget:0.41.2'
     compileOnly 'com.facebook.litho:litho-sections-annotations:0.41.2'
+    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.41.2'
 }
