--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,9 @@ dependencies {
     implementation 'com.facebook.litho:litho-sections-widget:0.41.2'
     compileOnly 'com.facebook.litho:litho-sections-annotations:0.41.2'
     annotationProcessor 'com.facebook.litho:litho-sections-processor:0.41.2'
-    //FOR: Litho-Glide integration
-    implementation 'com.github.pavlospt:litho-glide:1.6'
+    //FOR: Litho-Fresco integration
+    implementation 'com.facebook.fresco:fresco:1.13.0'
+    implementation 'com.facebook.litho:litho-fresco:0.41.2'
 
     //FOR: Async Http Client
     implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
