--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         tools:targetApi="31"
         >
 
+        <receiver
+            android:name=".ReminderReceiver"
+            android:enabled="true"/>
+
         <meta-data
             android:name="com.parse.SERVER_URL"
             android:value="@string/back4app_server_url" />
